test_regress/t/t_pp_defnettype_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2019 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

`default_nettype bad_none_such

`default_trireg_strength this_is_optional
